# voice-clone-studio

./: .gitignore  LICENSE  README.md  SETUP.md  STATUS.md  pyproject.toml  run.sh
assets/: icon.html
demo/: assemble.py
docs/: architecture.html  user-guide.html
frontend/: index.html  package-lock.json  package.json  record_scenes.mjs
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AudioPlayer.jsx  ConvertPage.jsx  GeneratePage.jsx  HistoryPage.jsx  Recorder.jsx  Slider.jsx  StudioPage.jsx  SupportPage.jsx  TrainPage.jsx  VoiceLibrary.jsx
install/: Install Voice Clone Studio.command
promo/: .gitignore  make_music.py  make_music_v2.py  make_music_v3.py  package-lock.json  package.json
promo/src/: Promo.tsx  Root.tsx  scenes.tsx  theme.ts  timeline.ts  ui.tsx
scripts/: make_app.sh  seedvc_worker.py  setup_gptsovits.sh  setup_seedvc.sh
server/: app.py  audio.py  dataset.py  db.py  engine.py  finetune.py  gsv.py  ingest.py  paths.py  quality.py  scripts_corpus.py  seedvc.py
