[project]
name = "voice-clone-studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "f5-tts>=1.1.20",
    "fastapi>=0.136.3",
    "python-multipart>=0.0.32",
    "soundfile>=0.14.0",
    "uvicorn[standard]>=0.49.0",
]
